--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
     <main class="main">
         <section class="hero">
             <div class="container hero-container">
-           <h1 class="hero-title">Effective Solutions <br>for Your Business</h1>
-           <button class="hero-button" type="button">Order Service</button>
+                <!-- <img src="./images/images-main/people-office 1.jpg" alt="images" width="1440px"> -->
+                    <h1 class="hero-title">Effective Solutions <br>for Your Business</h1>
+                    <button class="hero-button" type="button">Order Service</button>
             </div>
+            
         </section>
         <section class="features">
             <div class="container features-container">
