--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
     <main class="main">
         <section class="hero">
             <div class="container hero-container">
-                <!-- <img src="./images/images-main/people-office 1.jpg" alt="images" width="1440px"> -->
                     <h1 class="hero-title">Effective Solutions <br>for Your Business</h1>
                     <button class="hero-button" type="button">Order Service</button>
             </div>
@@ -56,6 +55,9 @@
                 <h2 hidden="" class="features-title">Features</h2>
                 <ul class="features-list">
                     <li class="features-list-item">
+                        <a href="#" class="features-list-atenna">
+                            <img src="/images/images-main/antenna.svg" alt="">
+                        </a>
                         <h3 class="features-list-title">Strategy</h3>
                         <p class="features-item-description">Our goal is to identify the business <br>problem to walk
                             away with the <br>perfect and creative solution.</p>
