--- a/index.html
+++ b/index.html
@@ -55,14 +55,17 @@
                 <h2 hidden="" class="features-title">Features</h2>
                 <ul class="features-list">
                     <li class="features-list-item">
-                        <a href="#" class="features-list-atenna">
+                        <div class="features-list-icon">
                             <img src="/images/images-main/antenna.svg" alt="">
-                        </a>
+                        </div>
                         <h3 class="features-list-title">Strategy</h3>
                         <p class="features-item-description">Our goal is to identify the business <br>problem to walk
                             away with the <br>perfect and creative solution.</p>
                     </li>
                     <li class="features-list-item">
+                        <div class="features-list-icon">
+                            <img src="/images/images-main/clock.svg" alt="">
+                        </div>
                         <h3 class="features-list-title">Punctuality</h3>
                         <p class="features-item-description">Bring the key message to the <br>brand's audience for the best
                             price <br>within the shortest possible time.</p>
