--- a/index.html
+++ b/index.html
@@ -71,11 +71,17 @@
                             price <br>within the shortest possible time.</p>
                     </li>
                     <li class="features-list-item">
+                        <div class="features-list-icon">
+                            <img src="/images/images-main/diagram.svg" alt="">
+                        </div>
                         <h3 class="features-list-title">Diligence</h3>
                         <p class="features-item-description">Research and confirm brands that <br>present the strongest
                             digital growth <br>opportunities and minimize risk.</p>
                     </li>
                     <li class="features-list-item">
+                        <div class="features-list-icon">
+                            <img src="/images/images-main/astronaut.svg" alt="">
+                        </div>
                         <h3 class="features-list-title">Technologies</h3>
                         <p class="features-item-description">Design practice focused on digital <br>experiences. We
                             bring forth a deep <br>passion for problem-solving.</p>
