--- a/index.html
+++ b/index.html
@@ -116,30 +116,34 @@
                         <h3 class="team-list-title">Mark Guerrero</h3>
                         <p class="team-list-description">Product Designer</p>
                         <ul class="team-list-links">
-                            <li class="team-list-links-item"></li> 
+                            <li class="team-list-links-item"> 
                                 <a href="#" class="team-list-link">
                                     <svg>
                                         <use href="images/images-main/icons.svg#instagram"/>
                                     </svg>
                                 </a>
-                            <li class="team-list-links-item"></li>
+                            </li>
+                            <li class="team-list-links-item">
                                 <a href="#" class="team-list-link">
                                     <svg>
                                         <use href="images/images-main/icons.svg#twitter"/>
                                     </svg>
                                 </a>
-                            <li class="team-list-links-item"></li> 
+                            </li>
+                            <li class="team-list-links-item"> 
                                 <a href="#" class="team-list-link">
                                     <svg>
                                         <use href="images/images-main/icons.svg#facebook"/>
                                     </svg>
                                 </a>
-                            <li class="team-list-links-item"></li> 
+                            </li>
+                            <li class="team-list-links-item">
                                 <a href="#" class="team-list-link">
                                     <svg>
                                         <use href="images/images-main/icons.svg#linkedin"/>
                                     </svg>
                                 </a>
+                            </li>     
                         </ul>             
                     </div>
                     
