--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 <footer class="footer">
             <div class="container footer-container">
                 <h2 hidden="" class="footer-title">Footer</h2>
-            <div>
+            <div class="footer-logo">
             <a class="footer-logo-link" href="index.html" >WEB<span class="studio-footer">STUDIO</span></a>
             <p class="footer-description">Increase the flow of customers and <br>sales for your business with digital <br>marketing & growth solutions.</p>
             </div>
@@ -320,28 +320,28 @@
                     <li class="footer-list-links-item"> 
                         <a href="#" class="footer-list-link">
                             <svg>
-                                <use href="images/images-main/"/>
+                                <use href="images/images-main/iconsfooter.svg#instagram"/>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-list-links-item">
                         <a href="#" class="footer-list-link">
                             <svg>
-                                <use href="images/images-main/icons.svg#twitter"/>
+                                <use href="images/images-main/iconsfooter.svg#twitter"/>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-list-links-item"> 
                         <a href="#" class="footer-list-link">
                             <svg>
-                                <use href="images/images-main/icons.svg#facebook"/>
+                                <use href="images/images-main/iconsfooter.svg#facebook"/>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-list-links-item">
                         <a href="#" class="footer-list-link">
                             <svg>
-                                <use href="images/images-main/icons.svg#linkedin"/>
+                                <use href="images/images-main/iconsfooter.svg#linkedin"/>
                             </svg>
                         </a>
                     </li>     
