--- a/portfolio.html
+++ b/portfolio.html
@@ -149,13 +149,48 @@
             </section>
         </main>
     <!-- Footer Section -->
-<footer class="footer">
-    <div class="container footer-container">
-        <a class="footer-logo-link" href="index.html">WEB<span class="studio-footer">STUDIO</span></a>
-        <p class="footer-description">Increase the flow of customers and <br>sales for your business with digital
-            <br>marketing & growth solutions.</p>
+    <footer class="footer">
+        <div class="container footer-container">
+            <h2 hidden="" class="footer-title">Footer</h2>
+        <div class="footer-logo">
+        <a class="footer-logo-link" href="index.html" >WEB<span class="studio-footer">STUDIO</span></a>
+        <p class="footer-description">Increase the flow of customers and <br>sales for your business with digital <br>marketing & growth solutions.</p>
+        </div>
+        <div>
+            <h6 class="footer-title-links">Social media</h6>
+            <ul class="footer-list-links">
+                <li class="footer-list-links-item"> 
+                    <a href="#" class="footer-list-link">
+                        <svg>
+                            <use href="images/images-main/iconsfooter.svg#instagram"/>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-list-links-item">
+                    <a href="#" class="footer-list-link">
+                        <svg>
+                            <use href="images/images-main/iconsfooter.svg#twitter"/>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-list-links-item"> 
+                    <a href="#" class="footer-list-link">
+                        <svg>
+                            <use href="images/images-main/iconsfooter.svg#facebook"/>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-list-links-item">
+                    <a href="#" class="footer-list-link">
+                        <svg>
+                            <use href="images/images-main/iconsfooter.svg#linkedin"/>
+                        </svg>
+                    </a>
+                </li>     
+            </ul>
+        </div>
     </div>
-    </footer>
+</footer>
     
 </body>
 </html>
