--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
                 <ul class="features-list">
                     <li class="features-list-item">
                         <div class="features-list-icon">
-                            <img src="/images/images-main/features-icon/antenna.svg" alt="">
+                            <a href="#" class="features-list-link">
+                                <svg>
+                                    <use href="images/images-main/iconsfeatures.svg#antenna"/>
+                                </svg>
+                            </a>
                         </div>
                         <h3 class="features-list-title">Strategy</h3>
                         <p class="features-item-description">Our goal is to identify the business <br>problem to walk
@@ -64,7 +68,11 @@
                     </li>
                     <li class="features-list-item">
                         <div class="features-list-icon">
-                            <img src="/images/images-main/features-icon/clock.svg" alt="">
+                            <a href="#" class="features-list-link">
+                                <svg>
+                                    <use href="images/images-main/iconsfeatures.svg#clock"/>
+                                </svg>
+                            </a>
                         </div>
                         <h3 class="features-list-title">Punctuality</h3>
                         <p class="features-item-description">Bring the key message to the <br>brand's audience for the best
@@ -72,7 +80,11 @@
                     </li>
                     <li class="features-list-item">
                         <div class="features-list-icon">
-                            <img src="/images/images-main/features-icon/diagram.svg" alt="">
+                            <a href="#" class="features-list-link">
+                                <svg>
+                                    <use href="images/images-main/iconsfeatures.svg#diagram"/>
+                                </svg>
+                            </a>
                         </div>
                         <h3 class="features-list-title">Diligence</h3>
                         <p class="features-item-description">Research and confirm brands that <br>present the strongest
@@ -80,7 +92,11 @@
                     </li>
                     <li class="features-list-item">
                         <div class="features-list-icon">
-                            <img src="/images/images-main/features-icon/astronaut.svg" alt="">
+                            <a href="#" class="features-list-link">
+                                <svg>
+                                    <use href="images/images-main/iconsfeatures.svg#astronaut"/>
+                                </svg>
+                            </a>
                         </div>
                         <h3 class="features-list-title">Technologies</h3>
                         <p class="features-item-description">Design practice focused on digital <br>experiences. We
