--- a/index.html
+++ b/index.html
@@ -285,12 +285,14 @@
         <div class="container customers-container">
             <h2 class="customers-title">Customers</h2>
             <ul class="customers-list">
-                    <!-- <div class="features-list-icon">
-                        <img src="/images/images-main/clock.svg" alt="">
-                    </div> -->
+                   
                 <li class="customers-list-item">
                     <div class="customers-list-icon">
-                        <img src="/images/images-main/customers-icon/yacologo.svg" alt="">
+                        <a href="#" class="customer-list-link">
+                            <svg>
+                                <use href="images/images-main/iconscustomers.svg#client1"/>
+                            </svg>
+                        </a>
                     </div>
                 </li>
                 <li class="customers-list-item">
