--- a/index.html
+++ b/index.html
@@ -289,9 +289,7 @@
                 <li class="customers-list-item">
                     <div class="customers-list-icon">
                         <a href="#" class="customer-list-link">
-                            <svg>
-                                <use href="images/images-main/iconscustomers.svg#client1"/>
-                            </svg>
+                            <img src="./images/images-main/customers-icon/yacologo.svg" alt="">
                         </a>
                     </div>
                 </li>
