--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                 </li>
                 <li class="customers-list-item">
                     <div class="customers-list-icon">
-                        <img src="/images/images-main/customers-icon/companylogo.svg" alt="">
+                        <img src="./images/images-main/customers-icon/companylogo.svg" alt="">
                     </div>
                 </li>
                 <li class="customers-list-item">
