--- a/index.html
+++ b/index.html
@@ -295,27 +295,37 @@
                 </li>
                 <li class="customers-list-item">
                     <div class="customers-list-icon">
+                        <a href="#" class="customer-list-link">
                         <img src="./images/images-main/customers-icon/companylogo.svg" alt="">
+                        </a>
                     </div>
                 </li>
                 <li class="customers-list-item">
                     <div class="customers-list-icon">
+                        <a href="#" class="customer-list-link">
                         <img src="/images/images-main/customers-icon/companypeellogo.svg" alt="">
+                        </a>
                     </div>
                 </li>
                 <li class="customers-list-item">
                     <div class="customers-list-icon">
+                        <a href="#" class="customer-list-link">
                         <img src="/images/images-main/customers-icon/fosterpeterslogo.svg" alt="">
+                        </a>
                     </div>
                 </li>
                 <li class="customers-list-item">
                     <div class="customers-list-icon">
+                        <a href="#" class="customer-list-link">
                         <img src="/images/images-main/customers-icon/brandlogo.svg" alt="">
+                        </a>
                     </div>
                 </li>
                 <li class="customers-list-item">
                     <div class="customers-list-icon">
+                        <a href="#" class="customer-list-link">
                         <img src="/images/images-main/customers-icon/taglinelogo.svg" alt="">
+                        </a>
                     </div>
                 </li> 
             </ul>
