--- a/index.html
+++ b/index.html
@@ -303,28 +303,28 @@
                 <li class="customers-list-item">
                     <div class="customers-list-icon">
                         <a href="#" class="customer-list-link">
-                        <img src="/images/images-main/customers-icon/companypeellogo.svg" alt="">
+                        <img src="./images/images-main/customers-icon/companypeellogo.svg" alt="">
                         </a>
                     </div>
                 </li>
                 <li class="customers-list-item">
                     <div class="customers-list-icon">
                         <a href="#" class="customer-list-link">
-                        <img src="/images/images-main/customers-icon/fosterpeterslogo.svg" alt="">
+                        <img src="./images/images-main/customers-icon/fosterpeterslogo.svg" alt="">
                         </a>
                     </div>
                 </li>
                 <li class="customers-list-item">
                     <div class="customers-list-icon">
                         <a href="#" class="customer-list-link">
-                        <img src="/images/images-main/customers-icon/brandlogo.svg" alt="">
+                        <img src="./images/images-main/customers-icon/brandlogo.svg" alt="">
                         </a>
                     </div>
                 </li>
                 <li class="customers-list-item">
                     <div class="customers-list-icon">
                         <a href="#" class="customer-list-link">
-                        <img src="/images/images-main/customers-icon/taglinelogo.svg" alt="">
+                        <img src="./images/images-main/customers-icon/taglinelogo.svg" alt="">
                         </a>
                     </div>
                 </li> 
