--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
                     <li class="features-list-item">
                         <div class="features-list-icon">
                             <a href="#" class="features-list-link">
-                                <svg>
-                                    <use href="images/images-main/iconsfeatures.svg#antenna"/>
-                                </svg>
+                                <img src="./images/images-main/customers-icon/taglinelogo.svg" alt="">
                             </a>
                         </div>
                         <h3 class="features-list-title">Strategy</h3>
