--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@
                     <li class="features-list-item">
                         <div class="features-list-icon">
                             <a href="#" class="features-list-link">
-                                <svg>
-                                    <use href="images/images-main/iconsfeatures.svg#clock"/>
-                                </svg>
+                                <img src="./images/images-main/features-icon/clock.svg" alt="">
                             </a>
                         </div>
                         <h3 class="features-list-title">Punctuality</h3>
@@ -79,9 +77,7 @@
                     <li class="features-list-item">
                         <div class="features-list-icon">
                             <a href="#" class="features-list-link">
-                                <svg>
-                                    <use href="images/images-main/iconsfeatures.svg#diagram"/>
-                                </svg>
+                                <img src="./images/images-main/features-icon/diagram.svg" alt="">
                             </a>
                         </div>
                         <h3 class="features-list-title">Diligence</h3>
@@ -91,9 +87,7 @@
                     <li class="features-list-item">
                         <div class="features-list-icon">
                             <a href="#" class="features-list-link">
-                                <svg>
-                                    <use href="images/images-main/iconsfeatures.svg#astronaut"/>
-                                </svg>
+                                <img src="./images/images-main/features-icon/astronaut.svg" alt="">
                             </a>
                         </div>
                         <h3 class="features-list-title">Technologies</h3>
