--- a/index.html
+++ b/index.html
@@ -279,46 +279,46 @@
             <ul class="customers-list">
                    
                 <li class="customers-list-item">
-                    <div class="customers-list-icon">
-                        <a href="#" class="customer-list-link">
-                            <img src="./images/images-main/customers-icon/yacologo.svg" alt="">
-                        </a>
-                    </div>
+                    <a class="customers-list-item-link">
+                        <svg class="customer-icon">
+                            <use href="./images/images-main/iconscustomers.svg#client1"></use>
+                        </svg>
+                    </a>
                 </li>
                 <li class="customers-list-item">
-                    <div class="customers-list-icon">
-                        <a href="#" class="customer-list-link">
-                        <img src="./images/images-main/customers-icon/companylogo.svg" alt="">
-                        </a>
-                    </div>
+                    <a class="customers-list-item-link">
+                        <svg class="customer-icon">
+                            <use href="./images/images-main/iconscustomers.svg#client2"></use>
+                        </svg>
+                    </a>
                 </li>
                 <li class="customers-list-item">
-                    <div class="customers-list-icon">
-                        <a href="#" class="customer-list-link">
-                        <img src="./images/images-main/customers-icon/companypeellogo.svg" alt="">
-                        </a>
-                    </div>
+                    <a class="customers-list-item-link">
+                        <svg class="customer-icon">
+                            <use href="./images/images-main/iconscustomers.svg#client3"></use>
+                        </svg>
+                    </a>
                 </li>
                 <li class="customers-list-item">
-                    <div class="customers-list-icon">
-                        <a href="#" class="customer-list-link">
-                        <img src="./images/images-main/customers-icon/fosterpeterslogo.svg" alt="">
-                        </a>
-                    </div>
+                    <a class="customers-list-item-link">
+                        <svg class="customer-icon">
+                            <use href="./images/images-main/iconscustomers.svg#client4"></use>
+                        </svg>
+                    </a>
                 </li>
                 <li class="customers-list-item">
-                    <div class="customers-list-icon">
-                        <a href="#" class="customer-list-link">
-                        <img src="./images/images-main/customers-icon/brandlogo.svg" alt="">
-                        </a>
-                    </div>
+                    <a class="customers-list-item-link">
+                        <svg class="customer-icon">
+                            <use href="./images/images-main/iconscustomers.svg#client5"></use>
+                        </svg>
+                    </a>
                 </li>
                 <li class="customers-list-item">
-                    <div class="customers-list-icon">
-                        <a href="#" class="customer-list-link">
-                        <img src="./images/images-main/customers-icon/taglinelogo.svg" alt="">
-                        </a>
-                    </div>
+                    <a class="customers-list-item-link">
+                        <svg class="customer-icon">
+                            <use href="./images/images-main/iconscustomers.svg#client6"></use>
+                        </svg>
+                    </a>
                 </li> 
             </ul>
         </div>
